@@ -1,10 +1,13 @@
-/*	Pretty URLs Chrome (Admin Interface)
-	Version: 0.9	*/
+/*
+ * Pretty URLs Chrome (Admin Interface)
+ * Version: 1.0RC
+ */
 
 div#chrome
 {
 	background: url('./chrome-bottom.png') 0% 100% no-repeat;
 	color: #000;
+	font-family: Verdana, sans-serif;
 	font-size: 12px;
 	line-height: 1.5em;
 	margin: 0 auto;
